--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
 		"postpackages-update": "npm run build",
 		"prelint-php": "wp-env run composer \"install --no-interaction\"",
 		"pretest:php": "wp-env start",
-		"test:php": "wp-env run phpunit 'phpunit -c /var/www/html/wp-content/plugins/pluginwp/phpunit.xml.dist --verbose'",
+		"test:php": "wp-env run phpunit 'phpunit -c /var/www/html/wp-content/plugins/debugblocks/phpunit.xml.dist --verbose'",
 		"wp-env": "wp-env"
 	},
 	"dependencies": {
-		"@pluginwp/plugin": "file:packages/plugin",
+		"@debugblocks/plugin": "file:packages/plugin",
 		"@wordpress/base-styles": "^4.8.1",
 		"@wordpress/block-editor": "^10.0.10",
 		"@wordpress/blocks": "^11.16.4",
