--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -1,18 +1,18 @@
 {
-	"name": "@pluginwp/plugin",
+	"name": "@debugblocks/plugin",
 	"version": "1.0.0-prerelease",
-	"description": "PluginWP plugin package description.",
-	"author": "PluginWP Author",
+	"description": "DebugBlocks plugin package description.",
+	"author": "JR Tashjian",
 	"license": "GPL-2.0-only",
 	"keywords": [ "wordpress" ],
-	"homepage": "https://github.com/jrtashjian/pluginwp/tree/HEAD/packages/plugin/README.md",
+	"homepage": "https://github.com/jrtashjian/debugblocks/tree/HEAD/packages/plugin/README.md",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/jrtashjian/pluginwp.git",
+		"url": "https://github.com/jrtashjian/debugblocks.git",
 		"directory": "packages/plugin"
 	},
 	"bugs": {
-		"url": "https://github.com/jrtashjian/pluginwp/issues"
+		"url": "https://github.com/jrtashjian/debugblocks/issues"
 	},
 	"main": "build/index.js",
 	"module": "build-module/index.js",
