--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
 	"scripts": {
 		"analyze-bundles": "npm run build -- --webpack-bundle-analyzer",
-		"build": "wp-scripts build --webpack-src-dir=packages",
-		"dev": "wp-scripts start --webpack-src-dir=packages",
+		"build": "wp-scripts build",
+		"dev": "wp-scripts start",
 		"lint-css": "wp-scripts lint-style",
 		"lint-js": "wp-scripts lint-js",
 		"lint-php": "wp-env run composer run-script lint",
 		"packages-update": "wp-scripts packages-update --dist-tag=wp-6.1",
 		"postpackages-update": "npm run build",
 		"prelint-php": "wp-env run composer \"install --no-interaction\"",
-		"pretest:php": "wp-env start",
-		"test:php": "wp-env run phpunit 'phpunit -c /var/www/html/wp-content/plugins/debugblocks/phpunit.xml.dist --verbose'",
 		"wp-env": "wp-env"
 	},
 	"dependencies": {
@@ -21,6 +19,7 @@
 		"@wordpress/components": "^21.0.7",
 		"@wordpress/data": "^7.1.3",
 		"@wordpress/dom-ready": "^3.17.1",
+		"@wordpress/edit-post": "^6.19.0",
 		"@wordpress/element": "^4.15.1",
 		"@wordpress/i18n": "^4.17.1",
 		"@wordpress/interface": "^4.16.7",
